# TeleMail

./: .gitignore  README.md  main.py  pyproject.toml  request.py  requirements.txt  test_request.py
.github/workflows/: check-mail.yml
api/: index.py
bot/components/: __init__.py  button.py
bot/handlers/: __init__.py  callbacks.py  commands.py
bot/keyboards/: __init__.py  inline.py
bot/services/: __init__.py  mail.py  telegram.py  user.py
bot/templates/: __init__.py  messages.py
database/: models.py  sessions.py  supabase.py
